--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:               Ssankq
+tagline:             'Dev Log'
+description:         ''
 url:                 //SsankQ.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
+category_dir: category/
+tag_dir: tag/
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Hyeongyu Kim
+  email:             ssankq@gmail.com
 
 # Gems
 plugins:
